--- a/twitoff/templates/base.html
+++ b/twitoff/templates/base.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
+
   <head>
     <title>TwitOff - {{ title }}</title>
-    <link rel="stylesheet" href="https://unpkg.com/picnic"/>
+    <link rel="stylesheet" href="https://unpkg.com/picnic" />
   </head>
+
   <body>
     <nav>
       <a href="/" class="brand"><span>TwitOff!</span></a>
@@ -14,7 +16,7 @@
 
       <div class="menu">
         <a href="/update" class="button warning">Update Tweets</a>
-        <!-- a href="/reset" class="button error">Reset Database</a> -->
+        <a href="/reset" class="button error">Reset Database</a>
       </div>
     </nav>
 
@@ -49,5 +51,7 @@
       </div>
       {% endblock %}
     </article>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/umbrellajs"/> -->
   </body>
+
 </html>
